My first project

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <!-- googlefont -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+    <!-- fontawesome -->
+    <script src="https://kit.fontawesome.com/043cab7a96.js" crossorigin="anonymous"></script>
+    <title>food groove</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
